# ur_ultrasonic_scan

./: .gitignore  ds_plan.txt  frames_2026-05-22_14.35.17.gv  git_push.txt  oupput2.txt  output1.txt  output_problem.txt  planning_mode.sh  servo_mode.sh  target_cylinder_base_link.pcd  target_cylinder_smoothed.pcd
src/artifacts_workpiece_description/: CMakeLists.txt  package.xml
src/artifacts_workpiece_description/launch/: display.launch  gazebo.launch
src/artifacts_workpiece_description/meshes/: workpiece_base_link.STL
src/artifacts_workpiece_description/urdf/: artifacts_workpiece_description.csv  artifacts_workpiece_description.urdf
src/camera_use/: CMakeLists.txt  package.xml
src/camera_use/launch/: camera.launch copy.py  camera.launch.py
src/camera_use/src/: my_camera_use (Output video and point cloud).cpp  my_camera_use copy 2.cpp  my_camera_use copy(PassThrough + VoxelGrid).cpp  my_camera_use copy(PassThrough + VoxelGrid+RANSAC 平面分割).cpp  my_camera_use copy(PassThrough + VoxelGrid+RANSAC 平面分割+PCA法向量).cpp  my_camera_use copy(PassThrough + VoxelGrid+RANSAC 平面分割+PCA法向量+切片路径规划).cpp  my_camera_use copy.cpp  my_camera_use.cpp  my_camera_use_new.cpp  my_camera_use_noRGB.cpp  real_point_cloud_deal_view.cpp
src/hello_moveit/: CMakeLists copy.txt  CMakeLists.txt  package copy.xml  package.xml
src/hello_moveit/launch/: plan_point.launch.py
src/hello_moveit/src/: hello_moveit.cpp  my_moveit_use copy (3.23.15.46).cpp  my_moveit_use copy (gpt没加功能之前).cpp  my_moveit_use copy.cpp  my_moveit_use.cpp  pcl_scan_workpiece_window (窗口).cpp  pcl_scan_workpiece_window copy(3.23.15.49).cpp  pcl_scan_workpiece_window.cpp
src/mybot_description/: CMakeLists.txt  package.xml
src/mybot_description/urdf/: 1  assumble.urdf.xacro  table.xacro  ur7e.urdf  ur7e.urdf.xacro
src/mybot_description/world/: myworld.world
src/optical_platform_description/: CMakeLists.txt  package.xml
src/optical_platform_description/launch/: display.launch  gazebo.launch
src/optical_platform_description/urdf/: optical_platform_description.csv  optical_platform_description.urdf
src/optical_platiform_description/: CMakeLists.txt  package.xml
src/optical_platiform_description/launch/: display.launch  gazebo.launch
src/optical_platiform_description/urdf/: optical_platiform_description.csv  optical_platiform_description.urdf
src/py_camera_use/: package.xml  setup.cfg  setup.py
src/py_camera_use/py_camera_use/: open3d_node.py
src/real_point_cloud_data/: target_cylinder_smoothed.pcd
src/realsense2_description/: package.xml
src/robot_arm_base_link/: CMakeLists.txt  package.xml
src/robot_arm_base_link/launch/: display.launch  gazebo.launch
src/robot_arm_base_link/meshes/: robot_arm_base_link.STL
src/robot_arm_base_link/urdf/: robot_arm_base_link.csv  robot_arm_base_link.urdf
src/robot_camera_control_sim/: CMakeLists.txt  package.xml
src/robot_camera_control_sim/launch/: gazebo.launch.py  my_moveit_rviz.launch.py  sim_bringup.launch.py
src/robot_camera_control_sim/rviz/: assimble_rviz2_sim.rviz
src/robot_camera_control_sim/src/: Trajectory_Planner_Sim.cpp  d435i_camera_sim_use copy.cpp  d435i_camera_sim_use.cpp  my_collision_define.cpp  point_tf_position.cpp  robot_control_sim copy.cpp  robot_control_sim.cpp  servo_test_node.cpp  view_pcd_result.cpp
src/sensers_fixture_description/: CMakeLists.txt  package.xml
src/sensers_fixture_description/launch/: display.launch  gazebo.launch
src/sensers_fixture_description/meshes/: sensers_fixture.STL
src/sensers_fixture_description/urdf/: sensers_fixture_description.csv  sensers_fixture_description.urdf
src/sensors_fixture_description/: CMakeLists.txt  package.xml
src/sensors_fixture_description/launch/: display.launch  gazebo.launch
src/sensors_fixture_description/meshes/: sensors_fixture.STL
src/sensors_fixture_description/urdf/: sensors_fixture_description.csv  sensors_fixture_description.urdf
src/ur7e_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur7e_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  servo_params.yaml  ur7e.ros2_control.xacro  ur7e.srdf  ur7e.urdf.xacro  ur7e_with_table.urdf.xacro
src/ur7e_moveit_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  my_moveit_rviz.launch.py  rsp.launch.py  servo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
