<?xml version="1.0"?>
<package format="3">
  <name>hello_moveit</name>
  <version>0.0.0</version>
  <description>MoveIt + PCL 扫描与三维可视化</description>

  <maintainer email="lk@todo.todo">lk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- =============================== -->
  <!-- ROS2 基础 -->
  <!-- =============================== -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- =============================== -->
  <!-- MoveIt -->
  <!-- =============================== -->
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>shape_msgs</depend>

  <!-- =============================== -->
  <!-- Eigen -->
  <!-- =============================== -->
  <depend>eigen3_cmake_module</depend>
  <depend>libeigen3-dev</depend>

  <!-- =============================== -->
  <!-- ⭐ PCL -->
  <!-- =============================== -->
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>

  <!-- =============================== -->
  <!-- ⭐ VTK（PCL可视化必须） -->
  <!-- =============================== -->
  <depend>vtk</depend>

  <!-- =============================== -->
  <!-- 测试 -->
  <!-- =============================== -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>